Organizing structure - Organize directory structure - Add Readme.md - CRUD example
